common-applications/test-environment/openeuler-ipb/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: openeuler-ipb-ingress
  namespace: openeuler-ipb
spec:
  tls:
    - hosts:
        - ipb.test.osinfra.cn
      secretName: openeuler-ipb-tls
  rules:
    - host: ipb.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: openeuler-ipb-service
              servicePort: 80
            path: /
