common-applications/test-environment/openeuler-ipb/networkpolicy.yaml
kind: NetworkPolicy
metadata:
  name: openeuler-quickissue-policy-01
  namespace: openeuler-ipb
spec:
  podSelector:
    matchLabels:
      app: openeuler-ipb
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - namespaceSelector:
            matchLabels:
              project: ingress-nginx
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1
